<resources>
    <string name="app_name">BuildBlitz</string>
    <string name="explicacion">BuildBlitz es una increíble aplicación en la que puedes subir tus propias builds de objetos para League of Legends, explorar las builds de otros jugadores, o tambien puedes comparar tus builds con las de los demas, y asi comparar sus estadisticas. Desliza para Acceder...</string>
    <string name="bienvenida">¡Bienvenido a BuildBlitz! Gracias por elegirnos</string>
    <string name="loginusuario">Introduce tu usuario aqui</string>
    <string name="personajeDetalle">Build de:</string>
    <string name="objeto1">Objeto 1</string>
    <string name="objeto2">Objeto 2</string>
    <string name="objeto3">Objeto 3</string>
    <string name="objeto4">Objeto 4</string>
    <string name="objeto5">Objeto 5</string>
    <string name="objeto6">Objeto 6</string>
    <string name="btnTX">Acceder</string>
    <string name="usuario">Usuario:</string>
    <string name="personaje">Personaje:</string>
    <string name="btnfav">Añadir a Favoritos</string>
    <string name="CreditTX">Usuario estás usando la versión 1 de...</string>
    <string name="Acceder">Pulse el boton para acceder a las distintas funcionalidades de la aplicacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volver">Volver al menu</string>
    <string name="salir">Salir</string>
    <string name="Builds">Builds</string>
    <string name="Favoritos">Favoritos</string>
    <string name="UsuarioMenu">Usuario</string>
</resources>