<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".fragmentos.DetailBuildsFragment">

    <TextView
        android:id="@+id/personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/personaje"
        style="@style/Titulos"/>

    <!-- Objeto 1 -->
    <TextView
        android:id="@+id/tvObjeto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personaje"
        android:layout_marginTop="16dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/tvObjeto1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto1"
        android:layout_marginEnd="16dp"
        />

    <!-- Objeto 2 -->
    <TextView
        android:id="@+id/tvObjeto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvObjeto1"
        android:layout_marginTop="20dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen2"
        android:layout_width="48dp"
        android:layout_height="48dp"

        app:layout_constraintTop_toTopOf="@id/tvObjeto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto2"
        android:layout_marginEnd="16dp"
        />

    <!-- Objeto 3 -->
    <TextView
        android:id="@+id/tvObjeto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvObjeto2"
        android:layout_marginTop="20dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/tvObjeto3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto3"
        android:layout_marginEnd="16dp"
        />

    <!-- Objeto 4 -->
    <TextView
        android:id="@+id/tvObjeto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvObjeto3"
        android:layout_marginTop="20dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/tvObjeto4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto4"
        android:layout_marginEnd="16dp"
        />

    <!-- Objeto 5 -->
    <TextView
        android:id="@+id/tvObjeto5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvObjeto4"
        android:layout_marginTop="20dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/tvObjeto5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto5"
        android:layout_marginEnd="16dp"
        />

    <!-- Objeto 6 -->
    <TextView
        android:id="@+id/tvObjeto6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objeto6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvObjeto5"
        android:layout_marginTop="20dp"
        style="@style/textos"
        />

    <ImageView
        android:id="@+id/imagen6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/tvObjeto6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvObjeto6"
        android:layout_marginEnd="16dp"
        />

    <Button
        android:id="@+id/Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

